update html files
I fixed the link icons in the footer.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             </div>
 
             <div class="footer-middle">
-                <a href="https://twitter.com/Fir_mia_na_17" target="_blank"><span class="icon fa fa-twitter"></a>
-                <a href=""><span class="icon fa fa-facebook"></a>
-                <a href=""><span class="icon fa fa-instagram"></a>
+                <a><span class="icon fa fa-twitter"></span></a>
+                <a href=""><span class="icon fa fa-facebook"></span></a>
+                <a href=""><span class="icon fa fa-instagram"></span></a>
             </div>
 
             <div class="footer-bottom">
