--- a/lesson.html
+++ b/lesson.html
@@ -111,7 +111,7 @@
             </div>
 
             <div class="footer-middle">
-                <a href="https://twitter.com/Fir_mia_na_17" target="_blank"><span class="icon fa fa-twitter"></span></a>
+                <a><span class="icon fa fa-twitter"></span></a>
                 <a href=""><span class="icon fa fa-facebook"></span></a>
                 <a href=""><span class="icon fa fa-instagram"></span></a>
             </div>
