--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
 
             <div class="footer-middle">
-                <a><span class="icon fa fa-twitter"></span></a>
+                <a href=""><span class="icon fa fa-twitter"></span></a>
                 <a href=""><span class="icon fa fa-facebook"></span></a>
                 <a href=""><span class="icon fa fa-instagram"></span></a>
             </div>
